--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="style.css">
     <title>State Of The House</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="script.js"></script> 
+    <script src="/public/script.js"></script> 
 </head>
 
 <body id="main">
     <nav>
-        <a href="login.html">Admin Login</a>
-        <a href="user.html">State Of The House</a>
+        <a href="/public/login.html">Admin Login</a>
+        <a href="/public/user.html">State Of The House</a>
     </nav>
 
     <div id="display"></div>
